1.0
 * first release

1.1
 * don't match items with no buyout price
 * treat 25% and 50% herbs differently
 * include verdant pigment & hunter's ink
 * fix 7 of blessings item id (was matching a random gem)

1.2
 * added crafting materials for swords, mages & demons decks
 * added crafting materials for vanilla decks
 * added options for each crafting tier

1.3
 * added crafting materials for TBC decks
 * added crafting materials for WotLK decks
 * added overheads for all crafted decks
 * added configurable prices for Primal & Eternal Life
 * show percentage cost of budget in results

1.4
 * ?